# player

./: .gitignore  AGENTS.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/plans/: 2026-03-20-protocol-navigator-design.md  2026-03-20-var-card-platform-implementation-plan.md  2026-03-20-var-card-platform-parallel-session-prompts.md
scripts/: tauri-before-build.mjs  tauri-cli.mjs
src/: App.vue  Layout.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/aimd-example-workspace/: cell-passage.aimd  pcr-amplification.aimd  protocol.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file.rs  mod.rs  project.rs  var_cards.rs  workspace.rs
src/components/: AimdSourceEditor.vue  ProtocolNavigatorRail.vue
src/components/var-cards/: VarCardGallery.vue  VarCardGalleryItem.vue  VarCardPreviewDialog.vue  VarCardPreviewSurface.vue  VarCardShell.vue
src/components/var-cards/studio/: VarCardBehaviorPanel.vue  VarCardFormPanel.vue  VarCardLivePreviewPanel.vue  VarCardStudioLayout.vue
src/composables/: useMonaco.ts  useVarCardRecorder.ts
src/features/var-cards/: api.ts  builtin.ts  types.ts
src/features/var-cards/runtime/: compileCardManifest.ts  (+4 more)
src/locales/: en.json  zh.json
src/pages/: EditorPage.vue  ProjectListPage.vue  ProtocolView.vue  SettingsPage.vue  VarCardMarketPage.vue  VarCardStudioPage.vue  WelcomePage.vue
src/router/: index.ts
src/stores/: editor.ts  project.ts  varCards.ts  workspace.ts
src/styles/: main.css
(+3 files in other folders)
